Update server dependencies